2010-07-06  Darin Adler  <darin@apple.com>

        Try to fix Chromium build.

        * DumpRenderTree/chromium/WebViewHost.cpp: Added include of PassOwnPtr.h.

2010-07-06  Darin Adler  <darin@apple.com>

        Fix build.

        * WebKitAPITest/TestsController.cpp:
        (WebKitAPITest::TestsController::addTest): Use leakPtr instead of release.

2010-07-06  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Kent Tamura.

        Bug 40558 - [DRT/Chromium] Upstream TestShellDevTools for Chromium DRT
        https://bugs.webkit.org/show_bug.cgi?id=40558

        Upstream DevTools for Chromium DRT.
        (original Chromium files rev. 51287)

        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp: Added.
        (DRTDevToolsAgent::DRTDevToolsAgent):
        (DRTDevToolsAgent::setWebView):
        (DRTDevToolsAgent::sendMessageToFrontend):
        (DRTDevToolsAgent::forceRepaint):
        (DRTDevToolsAgent::runtimeFeatureStateChanged):
        (DRTDevToolsAgent::injectedScriptSource):
        (DRTDevToolsAgent::injectedScriptDispatcherSource):
        (DRTDevToolsAgent::debuggerScriptSource):
        (DRTDevToolsAgent::asyncCall):
        (DRTDevToolsAgent::call):
        (DRTDevToolsAgent::webDevToolsAgent):
        (DRTDevToolsAgent::attach):
        (DRTDevToolsAgent::detach):
        (DRTDevToolsAgent::setTimelineProfilingEnabled):
        (DRTDevToolsAgent::evaluateInWebInspector):
        (DRTDevToolsAgent::dispatchMessageLoop):
        * DumpRenderTree/chromium/DRTDevToolsAgent.h: Added.
        (DRTDevToolsAgent::~DRTDevToolsAgent):
        (DRTDevToolsAgent::hostIdentifier):
        * DumpRenderTree/chromium/DRTDevToolsCallArgs.cpp:
        * DumpRenderTree/chromium/DRTDevToolsCallArgs.h:
        (DRTDevToolsCallArgs::DRTDevToolsCallArgs):
        (DRTDevToolsCallArgs::~DRTDevToolsCallArgs):
        (DRTDevToolsCallArgs::callsCount):